--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coding Quiz</title>
 </head>
+
 <body>
-    
+    <h4>class="time" style="text-align:right;"></h4>
+    <h1>Coding Quiz Challenge</h1>
+    <p>Try to answer the following code-related questions within the time limit. Keep in mid that incorrect answers
+        will penalize your score time by ten seconds!</p>
+    <button id="startButton">Start Quiz</button>
+
+    <h2 class="question"></h2>
+    <div id="answers">
+        <button class="buttonA"></button>
+        <button class="buttonB"></button>
+        <button class="buttonC"></button>
+        <button class="buttonD"></button>
+    </div>
+
+
+    <script src="assets/js/script.js"></script>
 </body>
+
 </html>
