--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h4>class="time" style="text-align:right;"></h4>
+    <h4 class="time" style="text-align:right;"></h4>
     <h1>Coding Quiz Challenge</h1>
     <p>Try to answer the following code-related questions within the time limit. Keep in mid that incorrect answers
         will penalize your score time by ten seconds!</p>
