--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
 <body>
     <h4 class="time" style="text-align:right;"></h4>
-    <h1>Coding Quiz Challenge</h1>
-    <p>Try to answer the following code-related questions within the time limit. Keep in mid that incorrect answers
-        will penalize your score time by ten seconds!</p>
-    <button id="startButton">Start Quiz</button>
+    <header id="header">
+        <h1>Coding Quiz Challenge</h1>
+        <p>Try to answer the following code-related questions within the time limit. Keep in mid that incorrect answers
+            will penalize your score time by ten seconds!</p>
+        <button id="startButton">Start Quiz</button>
+    </header>
 
     <h2 class="question"></h2>
     <div id="answers">
