--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
         <button class="buttonD"></button>
     </div>
 
+    <section class="formSection">
+        <h2 class="done"> </h2>
+        <p class="score"></p>
+        <label for="inputScore">Enter Initials: </label>
+        <form>
+            <input type="text" id="inputScore" name="inputScore">
+            <input type="submit" value="Submit" id="submitButton">
+        </form>
+
+        <ul id="leaderBoard">Leader Board:</ul>
+
+    </section>
+
+
+
 
     <script src="assets/js/script.js"></script>
 </body>
