--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2 class="done"> </h2>
         <p class="score"></p>
         <form>
-            <label for="inputScore">Enter Initials: </label>
+            <label for="inputScore">Enter Initials: </label> <br>
             <input type="text" id="inputScore" name="inputScore"> <br>
             <input type="submit" value="Submit" id="submitButton">
         </form>
